--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "https://omarvanegas.github.io/"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Fotos Fondo Blanco 121621.jpg"
   name             : "Omar David Vanegas-Virgüéz"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student"
