--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,13 @@ publication_category:
     title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+  workingpaper:
+    title: 'Working Papers'
+  workingprogress:
+    title: 'Working Papers'
+  other:
+    title: 'Other Publications'
+  
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
